src_folder/nginx-pod-config-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: secret-volume
      mountPath: "/etc/nginx/secret"
      readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: nginx-secret
