src_folder/nginx-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-client
spec:
  podSelector:
    matchLabels:
      app: nginx-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx-client
    ports:
    - protocol: TCP
      port: 80
